// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`UU5.Forms.Slider check default default props from Mixins UU5.Common.ContentMixin 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider check default default props from Mixins UU5.Commons.Base,Elementary,PureRender,Color 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider check default default props from Mixins UU5.Forms.InputMixin 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider default props UU5.Forms.Slider check default props 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props checkGrammar=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props checkGrammar=true 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props checkHighlight=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props checkHighlight=true 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props checkSpaces=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props checkSpaces=true 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props className="my-classname" 1`] = `
<div
  className="uu5-forms-slider my-classname uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="brown" 1`] = `
<div
  className="color-schema-brown uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="brown"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="brown"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="brown-rich" 1`] = `
<div
  className="color-schema-brown-rich uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="brown-rich"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="brown-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="cyan" 1`] = `
<div
  className="color-schema-cyan uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="cyan"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="cyan"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="cyan-rich" 1`] = `
<div
  className="color-schema-cyan-rich uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="cyan-rich"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="cyan-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="default" 1`] = `
<div
  className="color-schema-default uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="default"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="default"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="green" 1`] = `
<div
  className="color-schema-green uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="green"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="green"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="green-rich" 1`] = `
<div
  className="color-schema-green-rich uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="green-rich"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="green-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="grey" 1`] = `
<div
  className="color-schema-grey uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="grey"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="grey"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="grey-rich" 1`] = `
<div
  className="color-schema-grey-rich uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="grey-rich"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="grey-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="orange" 1`] = `
<div
  className="color-schema-orange uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="orange"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="orange"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="orange-rich" 1`] = `
<div
  className="color-schema-orange-rich uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="orange-rich"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="orange-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="pink" 1`] = `
<div
  className="color-schema-pink uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="pink"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="pink"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="pink-rich" 1`] = `
<div
  className="color-schema-pink-rich uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="pink-rich"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="pink-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="purple" 1`] = `
<div
  className="color-schema-purple uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="purple"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="purple"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="purple-rich" 1`] = `
<div
  className="color-schema-purple-rich uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="purple-rich"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="purple-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="red" 1`] = `
<div
  className="color-schema-red uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="red"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="red"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="red-rich" 1`] = `
<div
  className="color-schema-red-rich uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="red-rich"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="red-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="yellow" 1`] = `
<div
  className="color-schema-yellow uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="yellow"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="yellow"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props colorSchema="yellow-rich" 1`] = `
<div
  className="color-schema-yellow-rich uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      colorSchema="yellow-rich"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      colorSchema="yellow-rich"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props content="This is Content from ContentMixin" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      content="This is Content from ContentMixin"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props content=12345 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      content={12345}
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props controlled=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props controlled=true 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props default props 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props disabled=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props disabled=true 1`] = `
<div
  className="uu5-forms-slider uu5-common-disabled uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={true}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      disabled={true}
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      disabled={true}
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props dynamic=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props dynamic=true 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props feedback="error" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-error uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="error"
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider color-schema-red"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="error"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props feedback="initial" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props feedback="loading" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-loading uu5-forms-input-icon uu5-common-disabled"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="loading"
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      disabled={true}
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      disabled={true}
      feedback="loading"
      id="uuID-input"
      loading={true}
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props feedback="success" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-success uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="success"
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider color-schema-green"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="success"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props feedback="warning" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-warning uu5-forms-input-icon"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    feedback="warning"
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider color-schema-orange"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="warning"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props function -> Forms.InputMixin onChangeFeedback() 1`] = `
<Slider
  id="uuID"
  label="Height"
  message=""
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onChanged={[Function]}
  onValidate={[Function]}
/>
`;

exports[`UU5.Forms.Slider props function -> Forms.InputMixin onChangeFeedback() 2`] = `
<Slider
  feedback="success"
  id="uuID"
  label="Height"
  message="Is valid."
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onChanged={[Function]}
  onValidate={[Function]}
  value={5}
/>
`;

exports[`UU5.Forms.Slider props function -> Forms.InputMixin onValidate() 1`] = `
<Slider
  id="uuID"
  label="Height"
  message=""
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onChanged={[Function]}
  onValidate={[Function]}
/>
`;

exports[`UU5.Forms.Slider props function -> Forms.InputMixin onValidate() 2`] = `
<Slider
  feedback="success"
  id="uuID"
  label="Height"
  message="Is valid."
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onChanged={[Function]}
  onValidate={[Function]}
  value={5}
/>
`;

exports[`UU5.Forms.Slider props hidden=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props hidden=true 1`] = `
<div
  className="uu5-forms-slider uu5-common-hidden uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props id="myId" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="myId"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="myId-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="myId-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props ignoreHTML=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props ignoreHTML=true 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props inputAttrs={"type":"email","width":"150px"} 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={
        Object {
          "type": "email",
          "width": "150px",
        }
      }
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props inputColWidth="xs12 s6 m8 l9" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props inputColWidth="xs12 s9" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props label="Your personal email" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
>
  <label
    colWidth="uu5-col-xs12 uu5-col-s5 uu5-col-m5 uu5-col-l5 uu5-col-xl5"
    content="Your personal email"
    for="uuID-input"
  />
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s7 uu5-col-m7 uu5-col-l7 uu5-col-xl7"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props labelAlignment="xs-left s-right" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props labelAlignment="xs-right s-left" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props labelColWidth="xs12 s3" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props labelColWidth="xs12 s6 m4 l3" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props mainAttrs=undefined 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props max=700 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      max={700}
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={700}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props message="Your password is too short!" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    message="Your password is too short!"
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props min=1 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      min={1}
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={1}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={1}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="1"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props name="myName" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  name="myName"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      name="myName"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="myName"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props noIndex=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props noIndex=true 1`] = `
<div
  className="uu5-forms-slider uu5-noindex uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props onChange() 1`] = `
<Slider
  id="uuID"
  label="Height"
  message=""
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onChanged={[Function]}
  onValidate={[Function]}
/>
`;

exports[`UU5.Forms.Slider props onChange() 2`] = `
<Slider
  feedback="success"
  id="uuID"
  label="Height"
  message="Is valid."
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onChanged={[Function]}
  onValidate={[Function]}
  value={5}
/>
`;

exports[`UU5.Forms.Slider props onChanged() 1`] = `
<Slider
  id="uuID"
  label="Height"
  message=""
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onChanged={[Function]}
  onValidate={[Function]}
/>
`;

exports[`UU5.Forms.Slider props onChanged() 2`] = `
<Slider
  feedback="success"
  id="uuID"
  label="Height"
  message="Is valid."
  onChange={[Function]}
  onChangeFeedback={[Function]}
  onChanged={[Function]}
  onValidate={[Function]}
  value={5}
/>
`;

exports[`UU5.Forms.Slider props pureRender=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props pureRender=true 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props readOnly=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props readOnly=true 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial uu5-forms-input-read-only"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={true}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider uu5-forms-slider-slider-read-only"
      disabled={true}
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      readonly={true}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props selected=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props selected=true 1`] = `
<div
  className="uu5-forms-slider uu5-common-selected uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props size="l" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-l uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      size="l"
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props size="m" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props size="s" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-s uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      size="s"
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props step=5 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      step={5}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props style="padding:8px; borderRadius: 2px" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={
    Object {
      "borderRadius": "2px",
      "padding": "8px",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props style={"backgroundColor":"red","color":"blue"} 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={
    Object {
      "backgroundColor": "red",
      "color": "blue",
    }
  }
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props textCorrector=false 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props textCorrector=true 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props tooltip="My Tooltip" 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title="My Tooltip"
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={0}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="0"
    />
  </InputWrapper>
</div>
`;

exports[`UU5.Forms.Slider props value=666 1`] = `
<div
  className="uu5-forms-slider uu5-forms-input uu5-forms-input-m uu5-forms-input-initial"
  id="uuID"
  style={Object {}}
  title={null}
>
  <InputWrapper
    colWidth="uu5-col-xs12 uu5-col-s12 uu5-col-m12 uu5-col-l12 uu5-col-xl12"
    disabled={false}
    readonly={false}
    slider={true}
  >
    <Slider
      className="uu5-forms-slider-slider"
      onChange={[Function]}
      ref_={[Function]}
      style={
        Object {
          "width": null,
        }
      }
      value={10}
    />
    <text-input
      className="uu5-forms-slider-number"
      feedback="initial"
      id="uuID-input"
      mainAttrs={Object {}}
      max={10}
      min={0}
      name="uuID-input"
      onBlur={[Function]}
      onChange={[Function]}
      onChangeFeedback={[Function]}
      onFocus={[Function]}
      readonly={false}
      value="10"
    />
  </InputWrapper>
</div>
`;
